--- a/index.HTML
+++ b/index.HTML
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
-
 <head>
-<title> ERAS </title>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> ERAS </title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Fontes do texto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <!-- Ícones-->
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    /> 
+
+
 </head>
 
-
 <body>
-<header>
-<nav>
-    <ul>
-        <h1> ERAS </h1>
-        <li><a href="#introdução>"> Introdução </a></li>
-        <li><a href="#serviços"> Serviços </a></li>
-        <li><a href="#funcionamento"> Como Funciona </a></li>
-        <li><a href="#contato"> Contato </a></li>
-        <li><a href="#faqs"> FAQs </a></li>
-    </ul>
-</nav>
-
+<header class="header">
+    <div class="logo-container">
+        <p id="logo">Eras</p>
+    </div>
+    <nav class="menu">
+        <ul>
+            <li><a href="#introdução"> Introdução </a></li>
+            <li><a href="#serviços"> Serviços </a></li>
+            <li><a href="#funcionamento"> Como Funciona </a></li>
+            <li><a href="#contato"> Contato </a></li>
+            <li><a href="#faqs"> FAQs </a></li>
+        </ul>
+    </nav>
+</header>
 
 <main>
-    <section>
-        <img src="img/capa.png" alt="Capa" width="1366" height="500">
+    <section class="initial-section">
+        <!--<img src="img/capa.png" alt="Capa"> -->
+        <div class="title">
+            <h1>Eras</h1>
+            <p>Intermediação entre paciente, hospital e plano de saúde com agilidade e eficiência</p>
+        </div>
     </section>
 
     <section>
@@ -34,7 +50,7 @@
             <p>
                 No complexo cenário da saúde, a comunicação eficiente entre pacientes, hospitais e planos de saúde é
                 crucial para garantir um atendimento de qualidade. <br>
-                Na ERAS, entendemos as dificuldades que podem surgir durante o processo de liberação de
+                Na Eras, entendemos as dificuldades que podem surgir durante o processo de liberação de
                 procedimentos médicos e a importância de uma revisão cuidadosa das contas hospitalares. <br>
                 Por isso, oferecemos soluções personalizadas que não só agilizam esses processos, mas também
                 proporcionam uma experiência humanizada e acolhedora para todos os envolvidos.
@@ -172,7 +188,7 @@
 
 
 </main>
-</header>
+
 </body>
 
 </html>
