Seção de introdução adicionada

--- a/index.HTML
+++ b/index.HTML
@@ -36,31 +36,40 @@
 
 <main>
     <section class="initial-section">
-        <!--<img src="img/capa.png" alt="Capa"> -->
         <div class="title">
             <h1>Eras</h1>
             <p>Intermediação entre paciente, hospital e plano de saúde com agilidade e eficiência</p>
         </div>
     </section>
 
-    <section>
-        <h1 id="introdução">INTRODUÇÃO</h1>
-        <div class="intro-container">
-            <img src="img/introducao.png" alt="introducao">
-            <p>
-                No complexo cenário da saúde, a comunicação eficiente entre pacientes, hospitais e planos de saúde é
-                crucial para garantir um atendimento de qualidade. <br>
-                Na Eras, entendemos as dificuldades que podem surgir durante o processo de liberação de
-                procedimentos médicos e a importância de uma revisão cuidadosa das contas hospitalares. <br>
-                Por isso, oferecemos soluções personalizadas que não só agilizam esses processos, mas também
-                proporcionam uma experiência humanizada e acolhedora para todos os envolvidos.
-            </p>
+    <section id="introduction">
+        <div class="introduction-container">
+            <div class="left-side">
+                <img id="img-introduction" src="img/introducao.png" alt="introducao">
+            </div>
+            <div class="right-side">
+                <h1 id="introdução">Introdução</h1>
+                <p>
+                    No complexo cenário da saúde, a comunicação eficiente entre pacientes, hospitais e planos de saúde é
+                    crucial para garantir um atendimento de qualidade. <br> <br>
+
+                    Na Eras, entendemos as dificuldades que podem surgir durante o processo de liberação de
+                    procedimentos médicos e a importância de uma revisão cuidadosa das contas hospitalares. <br> <br>
+
+                    Por isso, oferecemos soluções personalizadas que não só agilizam esses processos, mas também
+                    proporcionam uma experiência humanizada e acolhedora para todos os envolvidos.
+                </p>
+            </div>
         </div>
     </section>
 
 
     <section>
-        <h1 id="serviços">NOSSOS SERVIÇOS</h1>
+        <div class="banner">
+            <h2>Nossos Serviços</h2>
+        </div>
+        
+
 
         <h3 class="title-right">Liberação de Procedimentos Cirúrgicos</h3>
         <div class="proced-container">
