Estilização básica da seção se serviços adicionada

--- a/index.HTML
+++ b/index.HTML
@@ -42,14 +42,14 @@
         </div>
     </section>
 
-    <section id="introduction">
-        <div class="introduction-container">
-            <div class="left-side">
+    <section class="sides">
+        <div class="sides-container-1">
+            <div class="left-side-1">
                 <img id="img-introduction" src="img/introducao.png" alt="introducao">
             </div>
-            <div class="right-side">
-                <h1 id="introdução">Introdução</h1>
-                <p>
+            <div class="right-side-1">
+                <h2 id="introdução">Introdução</h2>
+                <p class="default-text">
                     No complexo cenário da saúde, a comunicação eficiente entre pacientes, hospitais e planos de saúde é
                     crucial para garantir um atendimento de qualidade. <br> <br>
 
@@ -68,48 +68,51 @@
         <div class="banner">
             <h2>Nossos Serviços</h2>
         </div>
-        
 
+        <div class="sides-container-2">
+            <div class="left-side-2">
+                <h3 class="title-services">Liberação de Procedimentos Cirúrgicos</h3>
+                <p class="default-text" >
+                    Especialistas em OPME: Facilitamos a aprovação de órteses, próteses e materiais especiais. <br>
+                    Transparência e Eficácia: Trabalhamos com total transparência e atenção ao paciente, nosso maior
+                    patrimônio.
+                </p>
+            </div>       
+            <div class="right-side-2">
+                <img id="img-proced" src="img/procedimento.png" alt="procedimento">                
+            </div>
+        </div>
 
-        <h3 class="title-right">Liberação de Procedimentos Cirúrgicos</h3>
-        <div class="proced-container">
-            <img src="img/procedimento.png" alt="procedimento">
-            <p>
-                Especialistas em OPME: Facilitamos a aprovação de órteses, próteses e materiais especiais. <br>
-                Transparência e Eficácia: Trabalhamos com total transparência e atenção ao paciente, nosso maior
-                patrimônio.
-            </p>
+        <div class="sides-container-1">
+            <div class="left-side-1">
+                <img src="img/revisao.png" alt="revisao">
+            </div>
+            <div class="right-side-1">
+                <h3 class="title-services">Revisão de Contas Hospitalares</h3>
+                <p class="default-text">
+                    Redução de Glosas: Auditores especializados em revisar contas para minimizar glosas e otimizar os
+                    custos. <br>
+                    Material de Alta Qualidade: Usamos materiais aprovados pela ANVISA para garantir segurança e
+                    eficácia nos procedimentos.
+                </p>
+            </div>
+        </div>
+
+        <div class="sides-container-2">
+            <div class="left-side-2">
+                <h3 class="title-services">Suporte ao Paciente</h3>
+                <p class="default-text">
+                    Atendimento Humanizado: Nosso compromisso é com a qualidade e o bem-estar dos pacientes,
+                    proporcionando um atendimento acolhedor e eficiente. <br>
+                    Acesso aos Melhores Hospitais: Garantimos que nossos pacientes sejam atendidos nos maiores e
+                    melhores hospitais, trazendo qualidade ao processo de cuidado.
+                </p>                
+            </div>
+            <div class="right-side-2">
+                <img src="img/suporte.png" alt="suporte">            
+            </div>
         </div>
     </section>
-
-
-    <section>
-        <h3>Revisão de Contas Hospitalares</h3>
-        <div class="revisao-container">
-            <img src="img/revisao.png" alt="revisao">
-            <p>
-                Redução de Glosas: Auditores especializados em revisar contas para minimizar glosas e otimizar os
-                custos. <br>
-                Material de Alta Qualidade: Usamos materiais aprovados pela ANVISA para garantir segurança e
-                eficácia nos procedimentos.
-            </p>
-        </div>
-    </section>
-
-
-    <section>
-        <h3 class="title-right">Suporte ao Paciente</h3>
-        <div class="revisao-container">
-            <p>
-                Atendimento Humanizado: Nosso compromisso é com a qualidade e o bem-estar dos pacientes,
-                proporcionando um atendimento acolhedor e eficiente. <br>
-                Acesso aos Melhores Hospitais: Garantimos que nossos pacientes sejam atendidos nos maiores e
-                melhores hospitais, trazendo qualidade ao processo de cuidado.
-            </p>
-            <img src="img/suporte.png" alt="suporte">
-        </div>
-    </section>
-
 
     <section>
         <h1 id="funcionamento"> COMO FUNCIONA </h1>
