--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <title> ERAS </title>
     <meta charset="UTF-8">
@@ -7,199 +8,204 @@
     <!-- Fontes do texto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <!-- Ícones-->
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-    /> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
 
 
 </head>
 
 <body>
-<header class="header">
-    <div class="logo-container">
-        <p id="logo">Eras</p>
-    </div>
-    <nav class="menu">
-        <ul>
-            <li><a href="#introdução"> Introdução </a></li>
-            <li><a href="#serviços"> Serviços </a></li>
-            <li><a href="#funcionamento"> Como Funciona </a></li>
-            <li><a href="#contato"> Contato </a></li>
-            <li><a href="#faqs"> FAQs </a></li>
-        </ul>
-    </nav>
-</header>
-
-<main>
-    <section class="initial-section">
-        <div class="title">
-            <h1>Eras</h1>
-            <p>Intermediação entre paciente, hospital e plano de saúde com agilidade e eficiência</p>
+    <header class="header">
+        <div class="logo-container">
+            <p id="logo">Eras</p>
         </div>
-    </section>
+        <nav class="menu">
+            <ul>
+                <li><a href="#introdução"> Introdução </a></li>
+                <li><a href="#serviços"> Serviços </a></li>
+                <li><a href="#funcionamento"> Como Funciona </a></li>
+                <li><a href="#contato"> Contato </a></li>
+                <li><a href="#faqs"> FAQs </a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <section class="sides">
-        <div class="sides-container-1">
-            <div class="left-side-1">
-                <img id="img-introduction" src="img/introducao.png" alt="introducao">
+    <main>
+        <section class="initial-section">
+            <div class="title">
+                <h1>Eras</h1>
+                <p>Intermediação entre paciente, hospital e plano de saúde com agilidade e eficiência</p>
             </div>
-            <div class="right-side-1">
-                <h2 id="introdução">Introdução</h2>
-                <p class="default-text">
-                    No complexo cenário da saúde, a comunicação eficiente entre pacientes, hospitais e planos de saúde é
-                    crucial para garantir um atendimento de qualidade. <br> <br>
+        </section>
 
-                    Na Eras, entendemos as dificuldades que podem surgir durante o processo de liberação de
-                    procedimentos médicos e a importância de uma revisão cuidadosa das contas hospitalares. <br> <br>
+        <section class="sides">
+            <div class="sides-container-1">
+                <div class="left-side-1">
+                    <img id="img-introduction" src="img/introducao.png" alt="introducao">
+                </div>
+                <div class="right-side-1">
+                    <h2 id="introdução">Introdução</h2>
+                    <p class="default-text">
+                        No complexo cenário da saúde, a comunicação eficiente entre pacientes, hospitais e planos de
+                        saúde é
+                        crucial para garantir um atendimento de qualidade. <br> <br>
 
-                    Por isso, oferecemos soluções personalizadas que não só agilizam esses processos, mas também
-                    proporcionam uma experiência humanizada e acolhedora para todos os envolvidos.
-                </p>
+                        Na Eras, entendemos as dificuldades que podem surgir durante o processo de liberação de
+                        procedimentos médicos e a importância de uma revisão cuidadosa das contas hospitalares. <br>
+                        <br>
+
+                        Por isso, oferecemos soluções personalizadas que não só agilizam esses processos, mas também
+                        proporcionam uma experiência humanizada e acolhedora para todos os envolvidos.
+                    </p>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
 
-    <section>
-        <div class="banner">
-            <h2>Nossos Serviços</h2>
-        </div>
-
-        <div class="sides-container-2">
-            <div class="left-side-2">
-                <h3 class="title-services">Liberação de Procedimentos Cirúrgicos</h3>
-                <p class="default-text" >
-                    Especialistas em OPME: Facilitamos a aprovação de órteses, próteses e materiais especiais. <br>
-                    Transparência e Eficácia: Trabalhamos com total transparência e atenção ao paciente, nosso maior
-                    patrimônio.
-                </p>
-            </div>       
-            <div class="right-side-2">
-                <img id="img-proced" src="img/procedimento.png" alt="procedimento">                
+        <section>
+            <div class="banner">
+                <h2>Nossos Serviços</h2>
             </div>
-        </div>
 
-        <div class="sides-container-1">
-            <div class="left-side-1">
-                <img src="img/revisao.png" alt="revisao">
+            <div class="sides-container-2">
+                <div class="left-side-2">
+                    <h3 class="title-services">Liberação de Procedimentos Cirúrgicos</h3>
+                    <p class="default-text">
+                        Especialistas em OPME: Facilitamos a aprovação de órteses, próteses e materiais especiais. <br>
+                        Transparência e Eficácia: Trabalhamos com total transparência e atenção ao paciente, nosso maior
+                        patrimônio.
+                    </p>
+                </div>
+                <div class="right-side-2">
+                    <img id="img-proced" src="img/procedimento-red.png" alt="procedimento">
+                </div>
             </div>
-            <div class="right-side-1">
-                <h3 class="title-services">Revisão de Contas Hospitalares</h3>
-                <p class="default-text">
-                    Redução de Glosas: Auditores especializados em revisar contas para minimizar glosas e otimizar os
-                    custos. <br>
-                    Material de Alta Qualidade: Usamos materiais aprovados pela ANVISA para garantir segurança e
-                    eficácia nos procedimentos.
-                </p>
+
+            <div class="sides-container-1">
+                <div class="left-side-1">
+                    <img src="img/revisao-red.png" alt="revisao">
+                </div>
+                <div class="right-side-1">
+                    <h3 class="title-services">Revisão de Contas Hospitalares</h3>
+                    <p class="default-text">
+                        Redução de Glosas: Auditores especializados em revisar contas para minimizar glosas e otimizar
+                        os
+                        custos. <br>
+                        Material de Alta Qualidade: Usamos materiais aprovados pela ANVISA para garantir segurança e
+                        eficácia nos procedimentos.
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class="sides-container-2">
-            <div class="left-side-2">
-                <h3 class="title-services">Suporte ao Paciente</h3>
-                <p class="default-text">
-                    Atendimento Humanizado: Nosso compromisso é com a qualidade e o bem-estar dos pacientes,
-                    proporcionando um atendimento acolhedor e eficiente. <br>
-                    Acesso aos Melhores Hospitais: Garantimos que nossos pacientes sejam atendidos nos maiores e
-                    melhores hospitais, trazendo qualidade ao processo de cuidado.
-                </p>                
+            <div class="sides-container-2">
+                <div class="left-side-2">
+                    <h3 class="title-services">Suporte ao Paciente</h3>
+                    <p class="default-text">
+                        Atendimento Humanizado: Nosso compromisso é com a qualidade e o bem-estar dos pacientes,
+                        proporcionando um atendimento acolhedor e eficiente. <br>
+                        Acesso aos Melhores Hospitais: Garantimos que nossos pacientes sejam atendidos nos maiores e
+                        melhores hospitais, trazendo qualidade ao processo de cuidado.
+                    </p>
+                </div>
+                <div class="right-side-2">
+                    <img src="img/suporte-red.png" alt="suporte">
+                </div>
             </div>
-            <div class="right-side-2">
-                <img src="img/suporte.png" alt="suporte">            
+        </section>
+
+        <section>
+            <div class="banner" id="function">
+                <h2>Como funciona</h2>
             </div>
-        </div>
-    </section>
 
-    <section>
-        <h1 id="funcionamento"> COMO FUNCIONA </h1>
-
-        <h3 class="title-right">Coleta de Documentos</h3>
-        <div class="funci-container">
-            <p>
-                Para fornecer o melhor atendimento, precisamos que os seguintes documentos sejam apresentados:<br>
-                Documento de identidade com foto (RG com CPF, CNH, etc.) do paciente;<br>
-                Carteirinha do convênio;<br>
-                Exame de RNM para elaboração de Pedido Médico;<br>
-            </p>
-        </div>
-    </section>
-
-
-    <section>
-        <h3 class="title-right">Análise e Intermediação</h3>
-        <div class="funci-container">
-            <p>
-                Nossa equipe avalia a documentação e realiza a intermediação entre o hospital e o plano de saúde, agilizando a liberação dos procedimentos necessários.
-            </p>
-        </div>
-    </section>
-
-
-    <section>
-        <h3 class="title-right">Acompanhamento Personalizado</h3>
             <div class="funci-container">
+                <h3 class="title-right">Coleta de Documentos</h3>
                 <p>
-                Acompanhamos o paciente durante todo o processo, garantindo que ele receba o suporte necessário em todas as etapas.
+                    Para fornecer o melhor atendimento, precisamos que os seguintes documentos sejam apresentados:<br>
+                    Documento de identidade com foto (RG com CPF, CNH, etc.) do paciente;<br>
+                    Carteirinha do convênio;<br>
+                    Exame de RNM para elaboração de Pedido Médico;<br>
+                </p>
+            </div>
+
+            <div class="funci-container"></div>
+                <h3 class="title-right">Análise e Intermediação</h3>
+                <p>
+                    Nossa equipe avalia a documentação e realiza a intermediação entre o hospital e o plano de saúde,
+                    agilizando a liberação dos procedimentos necessários.
+                </p>
+            </div>
+
+            <div class="funci-container"></div>
+                <h3 class="title-right">Acompanhamento Personalizado</h3>
+                <p>
+                    Acompanhamos o paciente durante todo o processo, garantindo que ele receba o suporte necessário em todas
+                    as etapas.
+                </p>
+            </div>
+        </section>
+
+        <section>
+            <h1 id="depoimentos"> DEPOIMENTOS </h1>
+            <div class="depoimento-container">
+                <p>
+                    "A Eras foi um verdadeiro anjo no momento mais difícil da minha vida. Quando descobri que precisava
+                    de uma cirurgia, eles cuidaram de tudo,
+                    me acolheram com carinho e profissionalismo, e garantiram que eu pudesse focar na minha recuperação.
+                    O atendimento humanizado e a rapidez na liberação do procedimento fizeram toda a diferença. Serei
+                    eternamente grata."<br>
+                    — Maria S., Paciente
+                </p>
+                <p>
+                    "Enfrentar um problema de saúde é desafiador, mas a Eras me fez sentir seguro e amparado em cada
+                    etapa. Não foi apenas sobre liberar meu procedimento,
+                    foi sobre o cuidado e a atenção que recebi como ser humano. A competência e dedicação da equipe
+                    superaram minhas expectativas.
+                    Recomendo fortemente para quem busca um atendimento com alma."<br>
+                    — João P., Paciente
                 </p>
             </div>
         </section>
 
 
         <section>
-        <h1 id="depoimentos"> DEPOIMENTOS </h1>
-        <div class="depoimento-container">
-            <p>
-                "A Eras foi um verdadeiro anjo no momento mais difícil da minha vida. Quando descobri que precisava de uma cirurgia, eles cuidaram de tudo, 
-                me acolheram com carinho e profissionalismo, e garantiram que eu pudesse focar na minha recuperação. 
-                O atendimento humanizado e a rapidez na liberação do procedimento fizeram toda a diferença. Serei eternamente grata."<br>
-                — Maria S., Paciente
-            </p>
-            <p>
-                "Enfrentar um problema de saúde é desafiador, mas a Eras me fez sentir seguro e amparado em cada etapa. Não foi apenas sobre liberar meu procedimento, 
-                foi sobre o cuidado e a atenção que recebi como ser humano. A competência e dedicação da equipe superaram minhas expectativas. 
-                Recomendo fortemente para quem busca um atendimento com alma."<br>
-                — João P., Paciente
-            </p>
-        </div>
-        </section>
+            <h1 id="duvidas"> DÚVIDAS FREQUENTES </h1>
+            <div class="duvidas-container">
 
+                <p>
+                    1. Quais documentos são necessários para iniciar o processo?<br>
+                    Para iniciar o processo, precisaremos de um documento de identidade com foto, a carteirinha do
+                    convênio e o exame de RNM.
+                </p>
+                <p>
+                    2. Quanto tempo leva para a liberação de um procedimento cirúrgico?<br>
+                    O tempo pode variar, mas nossa equipe trabalha para garantir que a liberação seja feita com a maior
+                    agilidade possível.
+                </p>
+                <p>
+                    3. Quais hospitais vocês têm acesso?<br>
+                    Trabalhamos com os maiores e melhores hospitais, garantindo qualidade no atendimento.
+                </p>
+            </div>
 
-        <section>
-        <h1 id="duvidas"> DÚVIDAS FREQUENTES </h1>
-        <div class="duvidas-container">
-
-            <p>
-                1. Quais documentos são necessários para iniciar o processo?<br>
-                Para iniciar o processo, precisaremos de um documento de identidade com foto, a carteirinha do convênio e o exame de RNM.
-            </p>
-            <p>
-                2. Quanto tempo leva para a liberação de um procedimento cirúrgico?<br>
-                O tempo pode variar, mas nossa equipe trabalha para garantir que a liberação seja feita com a maior agilidade possível.
-            </p>
-            <p>
-                3. Quais hospitais vocês têm acesso?<br>
-                Trabalhamos com os maiores e melhores hospitais, garantindo qualidade no atendimento.
-            </p>
-        </div>
-
-        <div class="info_rodape">
-            <h3>Eras</h3>
-            <spam>Tel: +55 11 4040 1774</spam><br>
-            <spam> Email: Pedido@Erascorp.com.br </spam>
-        </div>
+            <div class="info_rodape">
+                <h3>Eras</h3>
+                <spam>Tel: +55 11 4040 1774</spam><br>
+                <spam> Email: Pedido@Erascorp.com.br </spam>
+            </div>
         </section>
 
 
         <footer id="rodapé">
             <p> 2024, ERAS. Todos os direitos reservados. </p>
-    </footer>
+        </footer>
 
 
-</main>
+    </main>
 
 </body>
 
