--- a/index.html
+++ b/index.html
@@ -72,35 +72,42 @@
             </div>
 
             <div class="services-container">
-                <div class="services-card">
-                    <h3 class="title-services">Liberação de Procedimentos Cirúrgicos</h3>
-                    <p class="default-text">
-                        Especialistas em OPME: Facilitamos a aprovação de órteses, próteses e materiais especiais. <br>
-                        Transparência e Eficácia: Trabalhamos com total transparência e atenção ao paciente, nosso maior
-                        patrimônio.
-                    </p>
+                <div class="service-item">
+                    <i class="fa-solid fa-hospital"></i>
+                    <div class="services-card">
+                        <h3 class="title-services">Liberação de Procedimentos Cirúrgicos</h3>
+                        <p class="default-text">
+                            Especialistas em OPME: Facilitamos a aprovação de órteses, próteses e materiais especiais. <br>
+                            Transparência e Eficácia: Trabalhamos com total transparência e atenção ao paciente, nosso maior
+                            patrimônio.
+                        </p>
+                    </div>
                 </div>
 
-                <div class="services-card">
-                    <h3 class="title-services">Suporte ao Paciente</h3>
-                    <p class="default-text">
-                        Atendimento Humanizado: Nosso compromisso é com a qualidade e o bem-estar dos pacientes,
-                        proporcionando um atendimento acolhedor e eficiente. <br>
-                        Acesso aos Melhores Hospitais: Garantimos que nossos pacientes sejam atendidos nos maiores e
-                        melhores hospitais, trazendo qualidade ao processo de cuidado.
-                    </p>
+                <div class="service-item">
+                    <i class="fa-regular fa-handshake"></i>
+                    <div class="services-card">
+                        <h3 class="title-services">Suporte ao Paciente</h3>
+                        <p class="default-text">
+                            Atendimento Humanizado: Nosso compromisso é com a qualidade e o bem-estar dos pacientes,
+                            proporcionando um atendimento acolhedor e eficiente. <br>
+                            Acesso aos Melhores Hospitais: Garantimos que nossos pacientes sejam atendidos nos maiores e
+                            melhores hospitais, trazendo qualidade ao processo de cuidado.
+                        </p>
+                    </div>
                 </div>
 
-
-                <div class="services-card">
-                    <h3 class="title-services">Revisão de Contas Hospitalares</h3>
-                    <p class="default-text">
-                        Redução de Glosas: Auditores especializados em revisar contas para minimizar glosas e otimizar
-                        os
-                        custos. <br>
-                        Material de Alta Qualidade: Usamos materiais aprovados pela ANVISA para garantir segurança e
-                        eficácia nos procedimentos.
-                    </p>
+                <div class="service-item">
+                    <div class="services-card">
+                        <h3 class="title-services">Revisão de Contas Hospitalares</h3>
+                        <p class="default-text">
+                            Redução de Glosas: Auditores especializados em revisar contas para minimizar glosas e otimizar
+                            os
+                            custos. <br>
+                            Material de Alta Qualidade: Usamos materiais aprovados pela ANVISA para garantir segurança e
+                            eficácia nos procedimentos.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
