Form de contato adicionado

--- a/index.html
+++ b/index.html
@@ -197,15 +197,15 @@
         </section>
       
 
-        <section>
+        <section id="contato">
             <div class="form-container">
-                <img src="/img/folder-eras.png" alt="">
+                <img id="img-form"  src="/img/folder-eras.png" alt="Folder Eras">
                 <div class="form">
                     <h3>Entre em contato</h3>
                     <form action="" method="post">
                         <label>Nome:</label>
                         <input type="text" name="nome" placeholder="Digite seu nome" required>
-                        <label>Email</label>
+                        <label>Email:</label>
                         <input type="email" name="email" placeholder="Digite seu email" required>
                         <textarea name="message" cols="30" rows="10" placeholder="Digite sua mensagem" required></textarea>
                         <button type="submit" >Enviar</button>
