--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- Ícones-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -45,7 +45,7 @@
         <section class="sides">
             <div class="sides-container-1">
                 <div class="left-side-1">
-                    <img id="img-introduction" src="img/eras3.png" alt="introducao">
+                    <img id="img-introduction" src="assets/img/eras3.png" alt="introducao">
                 </div>
                 <div class="right-side-1">
                     <h2 id="introdução">Introdução</h2>
@@ -257,7 +257,7 @@
 
         <section id="contato">
             <div class="form-container">
-                <img id="img-form"  src="/img/folder-eras.png" alt="Folder Eras">
+                <img id="img-form"  src="assets/img/folder-eras.png" alt="Folder Eras">
                 <div class="form">
                     <h3>Entre em contato</h3>
                     <form action="" method="post">
@@ -287,6 +287,6 @@
     <div id="btn-top">
         <i class="fas fa-arrow-up arrow up"></i>
     </div>
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
