Primeira versão do menu mobile

--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
                 <li><a href="#contato" id="link-contato"> Contato </a></li>
             </ul>
         </nav>
+
+        <button onclick="animationMenu()" id="btn-menu">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+        </button>
+
+        <div class="menu-mobile">
+            <nav class="nav">
+                <li><a href="#introdução">Quem somos</a></li>
+                <li><a href="#serviços"> Serviços </a></li>
+                <li><a href="#funcionamento"> Como Funciona </a></li>
+                <li><a href="#faqs"> FAQs </a></li>                
+                <li><a href="#contato" id="link-contato"> Contato </a></li> 
+            </nav>
+        </div>
     </header>
 
     <main>
