Responsividade da seção inicial e alguns comentários no css adicionados

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html lang="pt-br">
 <head>
     <title> ERAS </title>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
         <div class="logo-container">
             <p id="logo">Eras</p>
         </div>
-        <nav class="menu">
+        <nav class="menu-desktop">
             <ul>
                 <li><a href="#introdução">Quem somos</a></li>
                 <li><a href="#serviços"> Serviços </a></li>
@@ -164,7 +164,7 @@
         </section>
         
 
-        <section id="depoimentos">
+        <!-- <section id="depoimentos"> 
             <div class="banner">
                 <h2 id="statement-title">Depoimentos</h2>
             </div>
@@ -214,6 +214,46 @@
                         — João P., Paciente
                     </p>
                 </div>
+                <div class="statement">
+                    <p>
+                        "Enfrentar um problema de saúde é desafiador, mas a Eras me fez sentir seguro e amparado em cada
+                        etapa. Não foi apenas sobre liberar meu procedimento,
+                        foi sobre o cuidado e a atenção que recebi como ser humano. A competência e dedicação da equipe
+                        superaram minhas expectativas.
+                        Recomendo muito para quem busca um atendimento de qualidade."<br>
+                        — João P., Paciente
+                    </p>
+                </div>
+                <div class="statement">
+                    <p>
+                        "Enfrentar um problema de saúde é desafiador, mas a Eras me fez sentir seguro e amparado em cada
+                        etapa. Não foi apenas sobre liberar meu procedimento,
+                        foi sobre o cuidado e a atenção que recebi como ser humano. A competência e dedicação da equipe
+                        superaram minhas expectativas.
+                        Recomendo muito para quem busca um atendimento de qualidade."<br>
+                        — João P., Paciente
+                    </p>
+                </div>
+                <div class="statement">
+                    <p>
+                        "Enfrentar um problema de saúde é desafiador, mas a Eras me fez sentir seguro e amparado em cada
+                        etapa. Não foi apenas sobre liberar meu procedimento,
+                        foi sobre o cuidado e a atenção que recebi como ser humano. A competência e dedicação da equipe
+                        superaram minhas expectativas.
+                        Recomendo muito para quem busca um atendimento de qualidade."<br>
+                        — João P., Paciente
+                    </p>
+                </div>
+                <div class="statement">
+                    <p>
+                        "Enfrentar um problema de saúde é desafiador, mas a Eras me fez sentir seguro e amparado em cada
+                        etapa. Não foi apenas sobre liberar meu procedimento,
+                        foi sobre o cuidado e a atenção que recebi como ser humano. A competência e dedicação da equipe
+                        superaram minhas expectativas.
+                        Recomendo muito para quem busca um atendimento de qualidade."<br>
+                        — João P., Paciente
+                    </p>
+                </div>
 
                 <div class="nav-auto">
                     <div class="auto-btn1"></div>
@@ -231,7 +271,7 @@
             </div>
         </section>
 
-        </section>
+        </section>-->
 
         <section id="faqs">
             <div class="faq-toggle">
